--- a/ReactJSIntegration/Views/Shared/_Layout.cshtml
+++ b/ReactJSIntegration/Views/Shared/_Layout.cshtml
@@ -32,10 +32,11 @@
         </footer>
     </div>
 
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/16.13.0/umd/react.development.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.13.0/umd/react-dom.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
-    <script src="@Url.Content("~/Scripts/Components/Tutorial.jsx")"></script>
+    @Scripts.Render("~/Scripts/reactjs/react.development.js")
+    @Scripts.Render("~/Scripts/reactjs/react-dom.development.js")
+    @Scripts.Render("~/Scripts/reactjs/remarkable.min.js")
+    @Scripts.Render("~/bundles/main")
+    @Html.ReactInitJavaScript()
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
